fix for latest Boost and CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,11 @@
-# The name of our project is "BlobSeer". CMakeLists files in this project can
-# refer to the root source directory of the project as ${BLOBSEER_SOURCE_DIR} and
-# to the root binary directory of the project as ${BLOBSEER_BINARY_DIR}.
-cmake_minimum_required (VERSION 2.8)
+cmake_minimum_required (VERSION 3.7)
 project (ACFTE)
 
 # set the root prefix of the library dependencies
-set(EXTERNAL_ROOT ${HOME}/deploy)
+set(EXTERNAL_ROOT $ENV{HOME}/deploy)
 
 # some global compiler flags
 add_definitions(-O2 -Wall -D__BENCHMARK -D__ASSERT -D__INFO)
-set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++0x")
-
-# set the path to the cmake modules
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
 # Now set up the libraries
 # -----------------------------------------------------------------------------------
@@ -20,11 +13,8 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 # the elegant way to set up boost
 set(BOOST_ROOT ${EXTERNAL_ROOT})
 set(Boost_FIND_REQUIRED True)
-find_package(Boost 1.40 COMPONENTS thread mpi)
+find_package(Boost 1.60 COMPONENTS thread mpi)
 include_directories(${Boost_INCLUDE_DIR})
-
-find_package(Threads)
-set(Boost_LIBRARIES ${Boost_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
 
 # set up OpenSSL
 find_package(OpenSSL)
